tests/matrices/invalid/invalid_truncated_lines.mtx
%%MatrixMarket matrix coordinate double general
7 7 12
2 1 1
4 1 1